# FASTAPI

./: .gitignore
DAY1_FastAPI/과제1_FastAPI정리/: 99.README.md  main.py
DAY1_FastAPI/과제1_FastAPI정리/tests/: test_just.py
DAY1_FastAPI/과제2_API작성_중/: 99. README.md  JustTODO.md  pyproject.toml
DAY1_FastAPI/과제2_API작성_중/app/schemas/: users.py
DAY1_FastAPI/과제3_API작성_상/: .coverage  .dmypy.json  README.md  main.py  pyproject.toml  test.sh
DAY1_FastAPI/과제3_API작성_상/app/models/: users.py
DAY1_FastAPI/과제3_API작성_상/app/schemas/: users.py
DAY1_FastAPI/과제3_API작성_상/app/tests/: test_user_router.py
DAY2_FastAPI/과제1_FastAPI정리/: .coverage  main.py  pyproject.toml  test.sh  test_temp.py
DAY2_FastAPI/과제1_FastAPI정리/app/routers/: mental.py
과제1_FastAPI정리/: pyproject.toml
과제2_API작성_중/: README.md  main.py
