# pyproject.toml

[tool.poetry]
name = "과제3-api작성-상"
version = "0.1.0"
description = ""
authors = ["admin <admin@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"
pydantic = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
coverage = "*"
httpx = "*"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.12
strict = true

[tool.coverage.run]
source = ["app", "main"]
branch = true
omit = [
  "*/tests/*",
  "*/site-packages/*",
  "*/dist-packages/*",
  "*/python*/*",
  "*/_pytest/*",
]


[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
precision = 0

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-q --cov=app --cov=main --cov-report=term-missing --cov-report=html --cov-fail-under=80"

